--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
+  fluttertoast: ^8.2.2
+  dio: ^5.3.2
+  shared_preferences: ^2.2.0
+  hexcolor: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,9 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/123.png
-    - lib/screens/sign_up/sign_up_screen.dart
-    - lib/screens/receivinghistory/
+    - assets/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
